--- a/Proyecto-2-Lets-play.vcxproj.filters
+++ b/Proyecto-2-Lets-play.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="Menu.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Backtracking.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Menu.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Backtracking.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
