--- a/Proyecto-2-Lets-play.vcxproj
+++ b/Proyecto-2-Lets-play.vcxproj
@@ -148,10 +148,12 @@
     <ClCompile Include="Backtracking.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Menu.cpp" />
+    <ClCompile Include="Pathfinding.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Backtracking.h" />
     <ClInclude Include="Menu.h" />
+    <ClInclude Include="Pathfinding.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
