--- a/Proyecto-2-Lets-play.vcxproj.filters
+++ b/Proyecto-2-Lets-play.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="WorldRenderer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Matriz.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Menu.h">
@@ -69,6 +72,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="WorldRenderer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Matriz.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
